--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 :root {
-  --color-primary: #1a43e8;
-  --color-secondary: #e91e63;
+  --color-primary: #d7172f;
+  --color-secondary: #a61121;
   --color-background: #fff;
   --font-family-base: "Roboto", sans-serif;
   --font-size-base: 16px;
