--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <router-outlet></router-outlet>
+<app-button title="Button"></app-button>
+
+<app-card variant="filled">
+  dsdsdsds <app-button title="Button"></app-button>
+</app-card>
