--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 :root {
   --color-primary: #d7172f;
   --color-secondary: #a61121;
+  --color-dark: #333333;
   --color-background: #fff;
   --font-family-base: "Roboto", sans-serif;
   --font-size-base: 16px;
