--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,13 +1,17 @@
 .card {
-  color: var(--color-primary);
+  color: var(--color-dark);
   font-family: var(--font-family-base);
-  padding: calc(2 * var(--grid-unit)) calc(2 * var(--grid-unit));
+  padding: calc(2 * var(--grid-unit)) calc(4 * var(--grid-unit));
   border-radius: var(--grid-unit);
+  border: 1px solid var(--color-dark);
+  margin-top: calc(2 * var(--grid-unit));
   &.border {
+    border: 1px solid var(--color-dark);
   }
 
   &.filled {
     background-color: var(--color-white);
+    box-shadow: 0 3px 7px rgba(83, 86, 90, 0.2);
   }
 
   &.dcui-shadows-low-neutral {
