--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 <app-button title="Button"></app-button>
 
 <app-card variant="filled">
-  dsdsdsds <app-button title="Button"></app-button>
+  <app-button title="Button"></app-button>
 </app-card>
