--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <router-outlet></router-outlet>
-<app-button title="Button"></app-button>
+<app-button title="Button" icon="settings" iconPosition="right"></app-button>
 
 <app-card variant="filled">
-  <app-button title="Button"></app-button>
+  <app-button title="Button" icon="settings" iconPosition="left"></app-button>
 </app-card>
