--- a/src/app/button/button.component.scss
+++ b/src/app/button/button.component.scss
@@ -6,6 +6,9 @@
   color: var(--color-background);
   border: none;
   border-radius: calc(0.5 * var(--grid-unit));
+  display: inline-flex;
+  align-items: center;
+  gap: calc(0.5 * var(--grid-unit));
 
   &:hover {
     background-color: var(--color-secondary);
