--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,1 +1,11 @@
-<button class="app-button">Click me</button>
+<button [disabled]="disabled" class="app-button" (click)="handleClick()">
+  <ng-container *ngIf="iconPosition === 'left'">
+    <app-icon *ngIf="icon" [name]="icon"></app-icon>
+  </ng-container>
+
+  <div>{{ title }}</div>
+
+  <ng-container *ngIf="iconPosition === 'right'">
+    <app-icon *ngIf="icon" [name]="icon"></app-icon>
+  </ng-container>
+</button>
