--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <router-outlet></router-outlet>
-<app-button title="Button" icon="settings" iconPosition="right"></app-button>
+<app-button title="Button" icon="info" iconPosition="right"></app-button>
 
 <app-card variant="filled">
-  <app-button title="Button" icon="settings" iconPosition="left"></app-button>
+  <div class="button-wrapper">
+    <app-button title="Button" icon="settings" iconPosition="left"></app-button>
+    <app-button title="Button" icon="settings" iconPosition="left"></app-button>
+    <app-button title="Button" icon="info" iconPosition="left"></app-button>
+  </div>
 </app-card>
