--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,12 @@
 
 <app-card variant="filled">
   <div class="button-wrapper">
-    <app-button title="Button" icon="settings" iconPosition="left"></app-button>
+    <app-button
+      type="secondary"
+      title="Save"
+      icon="settings"
+      iconPosition="left"
+    ></app-button>
     <app-button title="Button" icon="settings" iconPosition="left"></app-button>
     <app-button title="Button" icon="info" iconPosition="left"></app-button>
   </div>
