--- a/src/app/ui-library/button/button.component.scss
+++ b/src/app/ui-library/button/button.component.scss
@@ -5,12 +5,27 @@
   height: calc(6 * var(--grid-unit));
   color: var(--color-background);
   border: none;
-  border-radius: calc(0.5 * var(--grid-unit));
+  border-radius: calc(1 * var(--grid-unit));
   display: inline-flex;
   align-items: center;
   gap: calc(1 * var(--grid-unit));
+  border: calc(0.25 * var(--grid-unit)) solid var(--color-primary);
+
+  .icon path {
+    fill: var(--color-background);
+  }
 
   &:hover {
     background-color: var(--color-secondary);
+  }
+
+  &.secondary {
+    background-color: var(--color-background);
+    color: var(--color-primary);
+
+    &:hover {
+      background-color: var(--color-primary);
+      color: var(--color-background);
+    }
   }
 }
