--- a/src/app/ui-library/icon/icon.component.html
+++ b/src/app/ui-library/icon/icon.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="name === 'info'">
   <svg
-    width="24px"
-    height="24px"
+    class="icon"
+    width="24"
     viewBox="0 0 24 24"
     fill="none"
     xmlns="http://www.w3.org/2000/svg"
@@ -23,8 +23,7 @@
 
 <ng-container *ngIf="name === 'settings'">
   <svg
-    width="20px"
-    height="20px"
+    class="icon"
     viewBox="0 0 30 30"
     version="1.1"
     xmlns="http://www.w3.org/2000/svg"
