--- a/src/app/ui-library/button/button.component.html
+++ b/src/app/ui-library/button/button.component.html
@@ -1,13 +1,13 @@
 <button
-  [disabled]="disabled"
-  class="app-button {{ type }}"
+  [disabled]="disabled()"
+  class="app-button {{ type() }}"
   (click)="handleClick()"
 >
   <ng-container *ngIf="iconPosition() === 'left'">
     <app-icon *ngIf="icon" [name]="icon()"></app-icon>
   </ng-container>
 
-  <div>{{ title }}</div>
+  <div>{{ title() }}</div>
 
   <ng-container *ngIf="iconPosition() === 'right'">
     <app-icon *ngIf="icon" [name]="icon()"></app-icon>
