--- a/src/app/ui-library/button/button.component.scss
+++ b/src/app/ui-library/button/button.component.scss
@@ -17,6 +17,7 @@
 
   &:hover {
     background-color: var(--color-secondary);
+    border: calc(0.25 * var(--grid-unit)) solid var(--color-secondary);
   }
 
   &.secondary {
